--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 
 </head>
 <body>
@@ -93,9 +94,6 @@
             <i class="fas fa-align-right"></i>
         </span>
     </nav>
-    <div class="logo_banner">
-        <img src="images/icon/banner_logo.png">
-    </div>
 </header>  
                 <section class="container-fluid">
                     <div class="form-search">
