Update code html, css date 19/08

--- a/src/asian-template.html
+++ b/src/asian-template.html
@@ -94,8 +94,8 @@
         <div class="navbar-nav m-auto">
             <span class="title_header">패키지모아</span> 
         </div>
-        <span class="btn_sidenav" onclick="openRightMenu()">
-            <i class="fas fa-align-right"></i>
+        <span class="btn_sidenav">
+            <img src="./images/icon/bullet_hambuger.png">
         </span>
     </nav>
 </header>  
@@ -498,10 +498,9 @@
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInliner">
+                                                                    id="customControlInliner" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInliner">Remember my
-                                                                    preference
+                                                                    for="customControlInliner"><span class="label-text">하나투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -509,10 +508,9 @@
                                                             </div>
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline2r">
+                                                                    id="customControlInline2r" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2r">Remember my
-                                                                    preference
+                                                                    for="customControlInline2r"><span class="label-text">모두투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -522,8 +520,47 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInline1r">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline1r">Remember my
-                                                                    preference
+                                                                    for="customControlInline1r"><span class="label-text">노랑풍선</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r4" checked>
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r4"><span class="label-text">참좋은여행</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r3">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r3"><span class="label-text">레드캡</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r2">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r2"><span class="label-text">온라인투어</span>
+                                                                    <span class="amount">
+                                                                        10개
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                                                <input type="checkbox" class="custom-control-input"
+                                                                    id="customControlInline1r1">
+                                                                <label class="custom-control-label text"
+                                                                    for="customControlInline1r1"><span class="label-text">인터파크투어</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -561,8 +598,8 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInlinee">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInlinee">Remember my
-                                                                    preference
+                                                                    for="customControlInlinee"><span class="label-text">인천/김포
+                                                                    </span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -570,21 +607,9 @@
                                                             </div>
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline2e">
+                                                                    id="customControlInline2e" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2e">Remember my
-                                                                    preference
-                                                                    <span class="amount">
-                                                                        10개
-                                                                    </span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                                                                <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline1e">
-                                                                <label class="custom-control-label text"
-                                                                    for="customControlInline1e">Remember my
-                                                                    preference
+                                                                    for="customControlInline2e"><span class="label-text">인천/김포</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -620,10 +645,10 @@
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInlinew">
+                                                                    id="customControlInlinew" checked>
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInlinew">Remember my
-                                                                    preference
+                                                                    for="customControlInlinew"><span class="label-text">인천/김포
+                                                                    </span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
@@ -633,19 +658,7 @@
                                                                 <input type="checkbox" class="custom-control-input"
                                                                     id="customControlInline2w">
                                                                 <label class="custom-control-label text"
-                                                                    for="customControlInline2w">Remember my
-                                                                    preference
-                                                                    <span class="amount">
-                                                                        10개
-                                                                    </span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                                                                <input type="checkbox" class="custom-control-input"
-                                                                    id="customControlInline1w">
-                                                                <label class="custom-control-label text"
-                                                                    for="customControlInline1w">Remember my
-                                                                    preference
+                                                                    for="customControlInline2w"><span class="label-text">인천/김포</span>
                                                                     <span class="amount">
                                                                         10개
                                                                     </span>
