--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,13 @@
             <span class="title_header">패키지모아</span> 
         </div>
         <span class="btn_sidenav">
-            <img src="../../images/icon/bullet_hambuger.png">
+            <img src="./images/icon/bullet_hambuger.png">
         </span>
     </nav>
 </header>  
+                <div class="logo_banner">
+  <img src="images/icon/banner_logo.png">
+</div> 
                 <section class="container-fluid">
                     <div class="form-search">
                         <div class="row">
