--- a/src/review-go-to-2.html
+++ b/src/review-go-to-2.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- include head.html -->
     <title>HTML</title>
@@ -19,8 +20,8 @@
 <meta property="og:type" content="">
 <meta property="og:url" content="" />
 <!-- Google Font -->
-<!-- include styles.html -->
-<!-- build:css(.) style/vendor.min.css -->
+    <!-- include styles.html -->
+    <!-- build:css(.) style/vendor.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/bootstrap/dist/css/bootstrap.css" />
 <!-- endbuild -->
 <!-- build:css(.tmp) style/style.min.css -->
@@ -37,6 +38,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 
 </head>
+
 <body>
     <div class="wrapper">
         <!-- include banner.html -->
@@ -45,9 +47,11 @@
         <main class="main-container">
             <div class="container_main" id="container_main">
                 <div class="ovelay_menu"></div>
-                <div class="main_sidenav main_sidenav_block main_sidenav_card main_sidenav_animate_right" id="rightMenu">
+                <div class="main_sidenav main_sidenav_block main_sidenav_card main_sidenav_animate_right"
+                    id="rightMenu">
                     <div class="main_sidenav_info">
-                        <button class="main_sidenav_item main_sidenav_item_button main_sidenav_item_large" id="close_menu"><i class="fas fa-times"></i></button>
+                        <button onclick="" class="main_sidenav_item main_sidenav_item_button main_sidenav_item_large"
+                            id="close_menu"><i class="fas fa-times"></i></button>
                         <div class="main_sidenav_login">
                             <span class="btn_login">
                                 카카오로 로그인
@@ -61,52 +65,88 @@
                         <ul>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">패키지 검색</a>
+                                <a href="">패키지 검색 </a>
                             </li>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">위시리스트</a>
+                                <a href="">패키지 검색 </a>
                             </li>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">예약 내역</a>
+                                <a href="">패키지 검색 </a>
                             </li>
                             <li>
                                 <i class="fas fa-pen mr-2"></i>
-                                <a href="">문의</a>
+                                <a href="">패키지 검색 </a>
+                            </li>
+                            <li>
+                                <i class="fas fa-pen mr-2"></i>
+                                <a href="">패키지 검색 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <header class="main_header">
-                    <nav class="navbar navbar-expand-lg navbar-light nar_custom" style="background-color: #fff; border-bottom: 1px solid #e5e5e5;">
-                        <a class="navbar-brand icon_logo" href="#">
-                            <img src="images/icon/icon_logo.png">
-                        </a>
-                        <div class="navbar-nav m-auto">
-                            <span class="title_header">패키지모아</span> 
-                        </div>
-                        <span class="btn_sidenav">
-                            <img src="../../images/icon/bullet_hambuger.png">
-                        </span>
-                    </nav>
-                </header>  
-                <section>
-                    <div class="wrapper_notification">
-                        <div class="bg_nofitication">
-                            <img src="../../images/background/bg_nofitication.png">
-                        </div>
-                        <div class="notification_content">
-                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                            <p>
-                                예약신청이 완료되었습니다.
-                                평일 영업시간 기준(휴일 제외)으로 
-                                예약 후 <span><a href="">하나투어</a></span> 담당자가 예약하신 번호로
-                                안내 드릴 예정입니다.
-                            </p>
-                            
-                            <div class="reservation_history">
-                                <span>예약내역 보기</span>
+    <nav class="navbar navbar-expand-lg navbar-light nar_custom" style="background-color: #fff; border-bottom: 1px solid #e5e5e5;">
+        <a class="navbar-brand icon_logo" href="#">
+            <img src="images/icon/icon_logo.png">
+        </a>
+        <div class="navbar-nav m-auto">
+            <span class="title_header">패키지모아</span> 
+        </div>
+        <span class="btn_sidenav">
+            <img src="./images/icon/bullet_hambuger.png">
+        </span>
+    </nav>
+</header>  
+                <section class="container-fuild">
+                    <div class="content">
+                        <div class="review-detail">
+                            <div class="title-detail">
+                                <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
+                            </div>
+                            <div class="date-review">
+                                <p>
+                                    2019-07-15
+                                </p>
+                            </div>
+                            <div class="star-writing">
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="far fa-star no-check"></i>
+                                    <span class="address-review">
+                                            만족
+                                    </span>
+                            </div>
+                            <div class="text-content">
+                                <p>
+                                        즐거운 여행이었습니다.
+                                </p>
+                            </div>
+                            <div class="gr-image-review">
+                                <div class="image-left">
+                                    <img src="./images/background/box-03.png" alt="">
+                                </div>
+                                <div class="image-right">
+                                    <div class="img-right-top">
+                                        <img src="./images/background/box-01.png" alt="">
+                                    </div>
+                                    <div class="img-right-bottom">
+                                            <img src="./images/background/box-01.png" alt="">
+                                            <div class="overlay-img">
+                                               <a href="">
+                                                    <span>+4</span>
+                                               </a>
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="btn-see-review">
+                                <button class="btn see-review">
+                                        여행후기 더보기
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -130,6 +170,7 @@
         </main>
 
         <!-- include footer.html -->
+
     </div>
 
     <!-- include scripts.html -->
@@ -157,4 +198,5 @@
 <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
 
 </body>
+
 </html>
