--- a/src/review-go-03.html
+++ b/src/review-go-03.html
@@ -101,116 +101,49 @@
 </header>  
                 <section class="container-fuild">
                     <div class="content">
-                        <div class="review-go">
-                           <div class="top-review-go">
-                               <button class="review-write btn">내가 남긴 후기 </button>
-                           </div>
-                        </div>
-                        <div class="box-review">
-                            <div class="item-review">
-                                <div class="left-review">
-                                    <a href="">
-                                        <img src="./images/background/box-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="right-review">
-                                    <div class="title-review">
-                                        <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                                        </a>
-                                    </div>
-                                    <div class="star-writing">
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="far fa-star no-check"></i>
-                                    </div>
-                                </div>
+                        <div class="write-review review-detail">
+                            <div class="title-detail">
+                                <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                             </div>
-                            <div class="item-review">
-                                <div class="left-review">
-                                    <a href="">
-                                        <img src="./images/background/box-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="right-review">
-                                    <div class="title-review">
-                                        <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                                        </a>
-                                    </div>
-                                    <div class="star-writing">
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="far fa-star no-check"></i>
-                                    </div>
-                                </div>
+                            <div class="date-review">
+                                <p>
+                                    2019-07-15
+                                </p>
                             </div>
-                            <div class="item-review">
-                                <div class="left-review">
-                                    <a href="">
-                                        <img src="./images/background/box-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="right-review">
-                                    <div class="title-review">
-                                        <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                                        </a>
-                                    </div>
-                                    <div class="star-writing">
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="far fa-star no-check"></i>
-                                    </div>
-                                </div>
+                            <div class="star-writing">
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="fas fa-star check"></i>
+                                    <i class="far fa-star no-check"></i>
+                                    <span class="address-review">
+                                            만족
+                                    </span>
                             </div>
-                            <div class="item-review">
-                                <div class="left-review">
-                                    <a href="">
-                                        <img src="./images/background/box-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="right-review">
-                                    <div class="title-review">
-                                        <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                                        </a>
-                                    </div>
-                                    <div class="star-writing">
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="far fa-star no-check"></i>
-                                    </div>
-                                </div>
+                            <div class="text-content">
+                                <p class="mb-1">
+                                    즐거운 여행이 되셨나요? 
+                                </p>
+                                <p>후기를 남겨주시면 다른 분들의 선택에 많은 도움이 되실 거에요.</p>
                             </div>
-                            <div class="item-review">
-                                <div class="left-review">
-                                    <a href="">
-                                        <img src="./images/background/box-01.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="right-review">
-                                    <div class="title-review">
-                                        <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
-                                        </a>
-                                    </div>
-                                    <div class="star-writing">
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="fas fa-star check"></i>
-                                        <i class="far fa-star no-check"></i>
-                                    </div>
-                                </div>
+                            <div class="write">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="진솔한 후기를 남겨주세요"></textarea>
+                            </div>
+                            <div class="add-img">
+                                <button class="btn btn-add-img">
+                                    <i class="fas fa-image"></i>
+                                </button>
+                            </div>
+                            <div class="share-sns">
+                                <h4>
+                                    이번 여행에 대한 글을 남긴 SNS 경로를 남기시면 많은 분들이 당신을 팔로워 하실 거에요. 
+                                </h4>
+                                <form action="">
+                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="URL">
+                                </form>
+                            </div>
+                            <div class="button-write">
+                                <button class="btn btn-write">후기등록</button>
                             </div>
                         </div>
                     </div>
