--- a/src/tour_schedule.html
+++ b/src/tour_schedule.html
@@ -36,6 +36,7 @@
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
+<link rel="stylesheet" href="datepicker.min.css">
 
 </head>
 <body>
@@ -332,6 +333,7 @@
 <script type="text/javascript" src="slick/slick.min.js"></script> -->
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="datepicker.min.js"></script> 
 
 </body>
 </html>
