--- a/src/asian-template.html
+++ b/src/asian-template.html
@@ -107,7 +107,7 @@
                                 <button class="btn btn-asia">아시아</button>
                             </div>
                             <div class="right">
-                                <button class="btn btn-goto">언제 떠날까요?</button>
+                                <button class="btn btn-goto"  id="get-date" type="button" data-toggle="modal">언제 떠날까요?</button>
                                 <button class="btn btn-goto">
                                     <i class="fas fa-user-alt"></i>
                                     <span class="ml-1">1</span>
@@ -741,6 +741,21 @@
                                     <button class="btn-right btn">100개의 결과 보기 </button>
                                 </div>
                             </div>
+                            <footer class="main_footer">
+                                <footer class="footer-container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+      	<div class="contact">
+      		<p class="conttact_title">문의하기 | 이용약관 | 개인정보 처리방침 </p>
+      		<p class="contact_qa">상호명 : 패키지모아 | 대표 : 송민근 | 대표번호 : 1644-0971</p>
+      		<p class="contact_qa">문의 : sminkeun@naver.com | 운영시간 : 평일 09:30 ~ 18:30</p>
+      	</div>
+      </div>
+    </div>
+  </div>
+</footer>
+                            </footer>
                         </div>
                         <!-- end -->
 
@@ -771,8 +786,59 @@
                                     <p>호주 환런</p>
                                 </div>
                             </div>
+                            <footer class="main_footer">
+                                <footer class="footer-container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+      	<div class="contact">
+      		<p class="conttact_title">문의하기 | 이용약관 | 개인정보 처리방침 </p>
+      		<p class="contact_qa">상호명 : 패키지모아 | 대표 : 송민근 | 대표번호 : 1644-0971</p>
+      		<p class="contact_qa">문의 : sminkeun@naver.com | 운영시간 : 평일 09:30 ~ 18:30</p>
+      	</div>
+      </div>
+    </div>
+  </div>
+</footer>
+                            </footer>
                         </div>
                         <!-- end -->
+
+                        <!-- popup date-time -->
+                        <div class="popup-datetime">
+                            <div class="header-popup">
+                                <div class="row">
+                                    <div class="col-md-12 d-flex justify-content-end">
+                                        <span class="btnds " id="close_date">
+                                            <i class="fas fa-times"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="popup-content">
+                               <h4 class="title-date">
+                                출발일자를 선택해 주세요  
+                               </h4>
+                               <div class="content-popup"></div>
+                            </div>
+                            <footer class="main_footer">
+                                <footer class="footer-container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+      	<div class="contact">
+      		<p class="conttact_title">문의하기 | 이용약관 | 개인정보 처리방침 </p>
+      		<p class="contact_qa">상호명 : 패키지모아 | 대표 : 송민근 | 대표번호 : 1644-0971</p>
+      		<p class="contact_qa">문의 : sminkeun@naver.com | 운영시간 : 평일 09:30 ~ 18:30</p>
+      	</div>
+      </div>
+    </div>
+  </div>
+</footer>
+                            </footer>
+                        </div>
+                        <!-- end -->
+
                         <div class="card-group">
                             <div class="row mb-4">
                                 <div class="col-sm-6">
