--- a/src/booking_schedule.html
+++ b/src/booking_schedule.html
@@ -145,7 +145,7 @@
                                 </p>
                             </div>
                             <div class="content_booking_schedule">
-                                <button class="btn_booking">
+                                <button class="btn btn_booking">
                                     취소신청 
                                 </button>
                             </div>
