--- a/src/cancel_registration_2.html
+++ b/src/cancel_registration_2.html
@@ -137,8 +137,14 @@
                                     <span class="title_content">이메일</span>
                                     <span class="sub_content">abc@abc.com</span>
                                 </div>
+                                <div class="wrapper_btn">
+                                    <button class="btn">
+                                        <i class="far fa-comments"></i>
+                                        1:1 문의 
+                                    </button>
+                                    <button class="btn">취소신청</button>
+                                </div>
                             </div>
-
                         </div>
                     </div>
                 </section>
