--- a/src/answer_question.html
+++ b/src/answer_question.html
@@ -97,7 +97,7 @@
                         <div class="wrapper_faq">
                             <div class="accordion">
                                 <div class="card_accordion">
-                                    <div class="card_header"  data-show='01'>
+                                    <div class="card_header"  data-show="01">
                                         <span data-toggle="collapse">
                                             자주하는 질문
                                         </span>
@@ -106,7 +106,7 @@
                                         <div class="card_body">
 
                                          <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_01'>
+                                            <div class="card_sub_header"  data-show="sub_01">
                                                 <span data-toggle="collapse" >
                                                     예약은 어떻게 확인하나요?  
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -119,7 +119,7 @@
                                         </div>
 
                                         <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_02'>
+                                            <div class="card_sub_header"  data-show="sub_02">
                                                 <span data-toggle="collapse" >
                                                     예약은 어떻게 확인하나요?  
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -132,7 +132,7 @@
                                         </div>
 
                                         <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_03'>
+                                            <div class="card_sub_header"  data-show="sub_03">
                                                 <span data-toggle="collapse" >
                                                     결제는 어떻게 하나요?  
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -145,7 +145,7 @@
                                         </div>
 
                                         <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_04'>
+                                            <div class="card_sub_header"  data-show="sub_04">
                                                 <span data-toggle="collapse" >
                                                     항공권만 구매가 가능한가요?
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -158,7 +158,7 @@
                                         </div>
 
                                         <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_05'>
+                                            <div class="card_sub_header"  data-show="sub_05">
                                                 <span data-toggle="collapse" >
                                                     아동/유아 기준 및 금액이 궁금해요 
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -171,7 +171,7 @@
                                         </div>
 
                                         <div class="card_sub_accordion">
-                                            <div class="card_sub_header"  data-show='sub_06'>
+                                            <div class="card_sub_header"  data-show="sub_06">
                                                 <span data-toggle="collapse" >
                                                     혼자 가고 싶은데 추가 비용이 있나요?  
                                                 </span><i class="fas fa-chevron-right"></i>
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                             <div class="card_accordion">
-                                <div class="card_header" data-show='02'>
+                                <div class="card_header" data-show="02">
                                     <span class="collapsed card-link" data-toggle="collapse" >
                                      예약 및 출발
                                  </span>
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                         <div class="card_accordion">
-                            <div class="card_header" data-show='03'>
+                            <div class="card_header" data-show="03">
                                 <span class="collapsed card-link" data-toggle="collapse" >
                                     예약 방법/결제
                                 </span>
