--- a/src/success_registration.html
+++ b/src/success_registration.html
@@ -25,6 +25,8 @@
 <!-- endbuild -->
 <!-- build:css(.tmp) style/style.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+<link rel="stylesheet" href="styles/jquery-nao-calendar.css">
+
 <!-- endbuild -->
 
 <!-- boostrap -->
@@ -35,7 +37,6 @@
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
-<link rel="stylesheet" href="datepicker.min.css">
 
 </head>
 <body>
@@ -156,7 +157,6 @@
 <script type="text/javascript" src="slick/slick.min.js"></script> -->
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
-<script src="datepicker.min.js"></script> 
 
 </body>
 </html>
